Fixed collapsed ML Alert dnd

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1763,12 +1763,12 @@ img.logo {
 /* AddNotificationButtonClosed */
 
 // Absolute position used to make element appear outside of Module Library div
-.notification-button-popout {
+.alert-closed-ML {
   background-color: #4E6878 !important;
   z-index: 100;
   position: absolute;
   left: 6rem;
-  top: 25.2rem;
+  top: 27.7rem;
 }
 
 /* ImportModuleFromGitHub */
